--- a/force-app/main/default/lwc/createaccountrecord/createaccountrecord.html
+++ b/force-app/main/default/lwc/createaccountrecord/createaccountrecord.html
@@ -1,21 +1,32 @@
 <template>
-    <lightning-card title = "Create Account Record Using LWC And Apex">
+    <lightning-card title="Create Account Record Using LWC And Apex">
+        <div class="slds-grid slds-gutters slds-p-left_medium">
+            <div class="slds-col ">
+                <span>
+                    <lightning-input  value={accRecordlst.Name} label="Account Name"  onchange={handelName}>
+
+                    </lightning-input>
+
+                </span>
+                <span>
+                    <lightning-input value={accRecordlst.Rating} label="Account Rating"  onchange={handelRating}>
+
+                    </lightning-input>
+                </span>
+            </div>
+            <div class="slds-col">
+                <span><lightning-input value={accRecordlst.Industry} label="Account Industry"  onchange={handelindustry}>
+
+                    </lightning-input></span>
+            </div>
+        </div> <br/>
         <div class="slds-p-left_medium">
-            <lightning-input label = "Account Name"
-                             type = "text"
-                             onchange= {handelName}>
+            <lightning-button label="Save Account Record" 
+                              variant="brand" 
+                              onclick={handalAccountSave}>
 
-            </lightning-input>
-            <lightning-input label = "Account Rating"
-                             type = "text"
-                             onchange= {handelName}>
-
-            </lightning-input>
-            <lightning-input label = "Account Industry"
-                             type = "text"
-                             onchange= {handelName}>
-
-            </lightning-input>
+            </lightning-button>
         </div>
+        
     </lightning-card>
 </template>
